refactor: remove serializable, authorId and authorName, toList